Desenvolvimento base da página inicial.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <!-- ESTILOS -->
   <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/aos.css">
   <link rel="stylesheet" type="text/css" href="assets/css/principal.css">
   <!-- / ESTILOS -->
 
@@ -114,8 +115,9 @@
 
   <!-- PROJETO EM DESTAQUE -->
   <section class="container">
+    <!-- PROJETOS: Linha 1 -->
     <!-- Projeto 1 -->
-    <div class="row position-relative align-items-center mb-5">
+    <div class="projetos-inicio-linha-1  row position-relative align-items-center mb-5" data-aos="fade-right" data-aos-once="false">
       <div class="col-lg-6">
         <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
         <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
@@ -123,31 +125,50 @@
 
       <div class="col-lg-6">
         <div class="projeto-artigo">
-          <h4 class="projeto-titulo">Lorem ipsum dolor</h4>
+          <h4 class="projeto-titulo">Projeto Green</h4>
           <p class="projeto-resumo">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-            Fuga explicabo eius, quidem expedita pariatur esse. 
-            Nisi perspiciatis commodi dignissimos quia optio in quae! 
-            Nisi asperiores voluptate quasi inventore reprehenderit officiis!  
+            O projeto tem como objetivo realizar sorteios, 
+            análises estatísticas e levantamentos das principais loterias brasileiras, 
+            utilizando conhecimentos adquiridos em estudos diários de programação em C# com Orientação a Objetos.  
           </p>
-          <a class="projeto-link" href="#"> <span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
+          <a class="projeto-link" href="https://github.com/euchico/projeto-green" target="_blank"> <span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
         </div>
       </div>
     </div>
     <!-- / Projeto 1 -->
 
     <!-- Projeto 2 -->
-    <div class="row position-relative align-items-center mb-5">
+    <div class="projetos-inicio-linha-1 row position-relative align-items-center mb-5" data-aos="fade-right" data-aos-once="false">
+      <div class="col-lg-6">
+        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
+        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
+      </div>
+
+      <div class="col-lg-6">
+        <div class="projeto-artigo">
+          <h4 class="projeto-titulo">Projeto Sem Planilha</h4>
+          <p class="projeto-resumo">
+            O projeto tem como objetivo atender às minhas necessidades pessoais de organização financeira de forma eficiente, 
+            utilizando tecnologias avançadas, padrões de projeto e boas práticas recomendadas pelo mercado.
+          </p>
+          <a class="projeto-link" href="https://github.com/euchico/projeto-sem-planilha" target="_blank"> <span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
+        </div>
+      </div>
+    </div>
+    <!-- / Projeto 2 -->
+    <!-- / PROJETOS: Linha 1 -->
+
+    <!-- PROJETOS: Linha 2 -->
+    <!-- Projeto 3 -->
+    <div class="projetos-inicio-linha-2 row position-relative align-items-center mb-5" data-aos="fade-left" data-aos-once="false">
       <div class="col-md-6 order-2 order-md-1">
         <div class="projeto-artigo">
-          <h4 class="projeto-titulo">Lorem ipsum dolor</h4>
+          <h4 class="projeto-titulo">Projeto Aventura Solo</h4>
           <p class="projeto-resumo">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-            Fuga explicabo eius, quidem expedita pariatur esse. 
-            Nisi perspiciatis commodi dignissimos quia optio in quae! 
-            Nisi asperiores voluptate quasi inventore reprehenderit officiis!  
+            Uma plataforma de livro-jogo tem como objetivo fornecer uma solução para jogadores e criadores de aventuras solo de RPG, 
+            permitindo a criação e jogabilidade interativa de aventuras e compartilhamento com outros jogadores. 
           </p>
-          <a class="projeto-link" href="#"><span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
+          <a class="projeto-link" href="https://github.com/euchico/projeto-aventura-solo" target="_blank"><span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
         </div>
       </div>
 
@@ -156,9 +177,82 @@
         <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
       </div>
     </div>
-    <!-- / Projeto 2 -->
+    <!-- / Projeto 3 -->
+
+    <!-- Projeto 4 -->
+    <div class="projetos-inicio-linha-2 row position-relative align-items-center mb-5" data-aos="fade-left" data-aos-once="false">
+      <div class="col-md-6 order-2 order-md-1">
+        <div class="projeto-artigo">
+          <h4 class="projeto-titulo">Projeto Kojima</h4>
+          <p class="projeto-resumo">
+            O projeto de estudo que visa desenvolver jogos 2D em C# utilizando a plataforma Unity. 
+            É uma oportunidade de aplicar conceitos de programação em um cenário divertido e diferente do que estou habituado.  
+          </p>
+          <a class="projeto-link" href="https://github.com/euchico/projeto-kojima" target="_blank"><span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
+        </div>
+      </div>
+
+      <div class="col-md-6 order-1 order-md-2">
+        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
+        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
+      </div>
+    </div>
+    <!-- / Projeto 4 -->
+    <!-- / PROJETOS: Linha 2 -->
   </section>
   <!-- / PROJETO EM DESTAQUE -->
+
+  <!-- ESTUDO -->
+  <section class="container mt-5">
+    <div class="row">
+      <!-- Estudo 1 -->
+      <div class="col-md-4 mb-5 mb-md-0 estudo">
+        <div>
+          <i class="fas fa-book fa-2x estudo-icone"></i>
+          <h5 class="estudo-titulo">Estudos</h5>
+          <p class="estudo-resumo px-3">
+            Repositório com objetivo compartilhar estudos e conhecimentos em programação, 
+            incluindo cursos e exemplos práticos nas linguagens utilizadas no meu quotidiano.
+          </p>
+          <a href="https://github.com/euchico/estudos" target="_blank">
+            <button class="btn btn-dark btn-sm" href="#">Acesse</button>
+          </a>
+        </div>
+      </div>
+      <!-- / Estudo 1 -->
+
+      <!-- Estudo 2 -->
+      <div class="col-md-4 mb-5 mb-md-0 estudo">
+        <div>
+          <i class="fas fa-trophy fa-2x estudo-icone"></i>
+          <h5 class="estudo-titulo">Desafios</h5>
+          <p class="estudo-resumo px-3">
+            Repositório dedicado ao compartilhamento desafios de programação e projetos completos para ilustrar a aplicação prática de conceitos de desenvolvimento.
+          </p>
+          <a href="https://github.com/euchico/desafios" target="_blank">
+            <button class="btn btn-dark btn-sm" href="#">Acesse</button>
+          </a>
+        </div>
+      </div>
+      <!-- / Estudo 2 -->
+
+      <!-- Estudo 3 -->
+      <div class="col-md-4 mb-5 mb-md-0 estudo">
+        <div>
+          <i class="fas fa-clipboard fa-2x estudo-icone"></i>
+          <h5 class="estudo-titulo">Resumos</h5>
+          <p class="estudo-resumo px-3">
+            Repositório de anotações e resumos para armazenar de maneira organizada e acessível os estudos realizados durante cursos e projetos de programação.
+          </p>
+          <a href="https://github.com/euchico/resumos" target="_blank">
+            <button class="btn btn-dark btn-sm" href="#">Acesse</button>
+          </a>
+        </div>
+      </div>
+      <!-- / Estudo 3 -->
+    </div>
+  </section>
+  <!-- / ESTUDO -->
 
   <!-- RODAPÉ -->
   <footer class="container">
@@ -193,6 +287,7 @@
 
   <!-- SCRIPTS -->
   <script type="text/javascript" src="assets/js/bootstrap.bundle.min.js"></script>
+  <script type="text/javascript" src="assets/js/aos.js"></script>
   <script type="text/javascript" src="assets/js/principal.js"></script>
 	<!-- / SCRIPTS -->
 </body>
