--- a/projeto/projeto-template.html
+++ b/projeto/projeto-template.html
@@ -36,6 +36,7 @@
   <!-- ESTILOS -->
   <link rel="stylesheet" type="text/css" href="../assets/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/aos.css">
   <link rel="stylesheet" type="text/css" href="../assets/css/principal.css">
   <!-- / ESTILOS -->
 
@@ -132,6 +133,7 @@
 
   <!-- SCRIPTS -->
   <script type="text/javascript" src="../assets/js/bootstrap.bundle.min.js"></script>
+  <script type="text/javascript" src="assets/js/aos.js"></script>
   <script type="text/javascript" src="../assets/js/principal.js"></script>
 	<!-- / SCRIPTS -->
 </body>
