--- a/sobre.html
+++ b/sobre.html
@@ -36,6 +36,7 @@
   <!-- ESTILOS -->
   <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/aos.css">
   <link rel="stylesheet" type="text/css" href="assets/css/principal.css">
   <!-- / ESTILOS -->
 
@@ -50,7 +51,7 @@
   <title>euChico - Sobre</title>
 </head>
 
-<body id="sobre">
+<body id="pagina-sobre">
   <!-- FUNDO NAVEGAÇÃO -->
   <div class="fundo-navegacao">
     <!-- NAVEGAÇÃO -->
@@ -99,9 +100,11 @@
   </div>
   <!-- / FUNDO NAVEGAÇÃO -->
 
-  <!-- PROJETO -->
+
   <section class="container">
-    <div class="row position-relative align-items-center mb-5">
+    <!-- PROJETOS -->
+    <!-- Projeto 1 -->
+    <div class="projetos-sobre row position-relative align-items-center mb-5">
       <div class="col-lg-6">
         <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
         <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
@@ -109,19 +112,80 @@
 
       <div class="col-lg-6">
         <div class="projeto-artigo">
-          <h4 class="projeto-titulo">Lorem ipsum dolor</h4>
+          <h4 class="projeto-titulo">Projeto Green</h4>
           <p class="projeto-resumo">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-            Fuga explicabo eius, quidem expedita pariatur esse. 
-            Nisi perspiciatis commodi dignissimos quia optio in quae! 
-            Nisi asperiores voluptate quasi inventore reprehenderit officiis!  
+            O projeto tem como objetivo realizar sorteios, 
+            análises estatísticas e levantamentos das principais loterias brasileiras, 
+            utilizando conhecimentos adquiridos em estudos diários de programação em C# com Orientação a Objetos.  
           </p>
-          <a class="projeto-link" href="#"> <span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
+          <a class="projeto-link" href="https://github.com/euchico/projeto-green" target="_blank"> <span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
         </div>
       </div>
     </div>
+    <!-- / Projeto 1 -->
+
+    <!-- Projeto 2 -->
+    <div class="projetos-sobre row position-relative align-items-center mb-5">
+      <div class="col-lg-6">
+        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
+        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
+      </div>
+
+      <div class="col-lg-6">
+        <div class="projeto-artigo">
+          <h4 class="projeto-titulo">Projeto Carteira</h4>
+          <p class="projeto-resumo">
+            O projeto tem como objetivo atender às minhas necessidades pessoais de organização financeira de forma eficiente, 
+            utilizando tecnologias avançadas, padrões de projeto e boas práticas recomendadas pelo mercado.
+          </p>
+          <a class="projeto-link" href="https://github.com/euchico/projeto-sem-planilha" target="_blank"> <span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
+        </div>
+      </div>
+    </div>
+    <!-- / Projeto 2 -->
+
+    <!-- Projeto 3 -->
+    <div class="projetos-sobre row position-relative align-items-center mb-5">
+      <div class="col-lg-6">
+        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
+        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
+      </div>
+      
+      <div class="col-lg-6">
+        <div class="projeto-artigo">
+          <h4 class="projeto-titulo">Projeto Aventura Solo</h4>
+          <p class="projeto-resumo">
+            Uma plataforma de livro-jogo tem como objetivo fornecer uma solução para jogadores e criadores de aventuras solo de RPG, 
+            permitindo a criação e jogabilidade interativa de aventuras e compartilhamento com outros jogadores. 
+          </p>
+          <a class="projeto-link" href="https://github.com/euchico/projeto-aventura-solo" target="_blank"><span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
+        </div>
+      </div>
+    </div>
+    <!-- / Projeto 3 -->
+
+    <!-- Projeto 4 -->
+    <div id="projeto-4" class="projetos-sobre row position-relative align-items-center mb-5">
+      <div class="col-lg-6">
+        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
+        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
+      </div>
+
+      <div class="col-lg-6">
+        <div class="projeto-artigo">
+          <h4 class="projeto-titulo">Projeto Kojima</h4>
+          <p class="projeto-resumo">
+            O projeto de estudo que visa desenvolver jogos 2D em C# utilizando a plataforma Unity. 
+            É uma oportunidade de aplicar conceitos de programação em um cenário divertido e diferente do que estou habituado.  
+          </p>
+          <a class="projeto-link" href="https://github.com/euchico/projeto-kojima" target="_blank"><span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
+        </div>
+      </div>
+    </div>
+    <!-- / Projeto 4 -->
+    <!-- / PROJETOS-->
   </section>
-  <!-- / PROJETO -->
+
 
   <!-- RODAPÉ -->
   <footer class="container">
@@ -156,6 +220,7 @@
 
   <!-- SCRIPTS -->
   <script type="text/javascript" src="assets/js/bootstrap.bundle.min.js"></script>
+  <script type="text/javascript" src="assets/js/aos.js"></script>
   <script type="text/javascript" src="assets/js/principal.js"></script>
 	<!-- / SCRIPTS -->
 </body>
