Estrutura básica da página sobre

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <section class="container">
     <!-- PROJETOS: Linha 1 -->
     <!-- Projeto 1 -->
-    <div class="projetos-inicio-linha-1  row position-relative align-items-center mb-5" data-aos="fade-right" data-aos-once="false">
+    <div class="projetos-inicio-linha-1  row position-relative align-items-center mb-5" data-aos="fade-right" data-aos-once="true">
       <div class="col-lg-6">
         <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
         <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
@@ -138,7 +138,7 @@
     <!-- / Projeto 1 -->
 
     <!-- Projeto 2 -->
-    <div class="projetos-inicio-linha-1 row position-relative align-items-center mb-5" data-aos="fade-right" data-aos-once="false">
+    <div class="projetos-inicio-linha-1 row position-relative align-items-center mb-5" data-aos="fade-right" data-aos-once="true">
       <div class="col-lg-6">
         <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
         <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
@@ -160,7 +160,7 @@
 
     <!-- PROJETOS: Linha 2 -->
     <!-- Projeto 3 -->
-    <div class="projetos-inicio-linha-2 row position-relative align-items-center mb-5" data-aos="fade-left" data-aos-once="false">
+    <div class="projetos-inicio-linha-2 row position-relative align-items-center mb-5" data-aos="fade-left" data-aos-once="true">
       <div class="col-md-6 order-2 order-md-1">
         <div class="projeto-artigo">
           <h4 class="projeto-titulo">Projeto Aventura Solo</h4>
@@ -180,7 +180,7 @@
     <!-- / Projeto 3 -->
 
     <!-- Projeto 4 -->
-    <div class="projetos-inicio-linha-2 row position-relative align-items-center mb-5" data-aos="fade-left" data-aos-once="false">
+    <div class="projetos-inicio-linha-2 row position-relative align-items-center mb-5" data-aos="fade-left" data-aos-once="true">
       <div class="col-md-6 order-2 order-md-1">
         <div class="projeto-artigo">
           <h4 class="projeto-titulo">Projeto Kojima</h4>
