--- a/sobre.html
+++ b/sobre.html
@@ -100,11 +100,30 @@
   </div>
   <!-- / FUNDO NAVEGAÇÃO -->
 
+  <!-- SEÇÃO: BIOGRAFIA -->
+  <section id="secao-biografia" class="container py-5">
+    <div class="text-center">
+      <img class="img-fluid img-perfil" src="assets/img/euchico-perfil-2.jpg" alt="Avatar euChico">
 
+      <h2>Francisco de Paula</h2>
+
+      <hr class="hr-padrao">
+    </div>
+
+    <p class="resumo">
+      Sou Francisco de Paula, moro no Rio de Janeiro, mais especificamente na Baixada e tenho 31 anos. Cursei Ciência da Computação, hoje faço Licenciatura em Matemática e sou Arte Amador, isso mostra que minha trajetória não é nada linear, por isso minha frase preferida é “Quando a gente anda sempre em frente, não pode ir muito longe…” (Saint-Exupéry).
+      <br><br>
+      Desde pequeno desenho e me interesso por arte, chegando a pensar em seguir no Desenho Industrial. Contudo, a escolha para o meu primeiro curso superior foi Ciência da Computação, sempre fui apaixonado por jogos e tecnologia, a escolha fez muito sentido no momento. Foi um ótimo curso, mas esse período passei por alguns pontos baixos que resultaram no trancamento da graduação. Posteriormente, iniciei a Licenciatura em Matemática, um novo curso, em uma nova faculdade, a combinação perfeita das áreas de humanas com a Educação e exatas com a Matemática.
+      <br><br>
+      Nunca deixei a programação e constantemente tento utilizar os conhecimentos na minha vida, acadêmica e cotidiana. Isso fez retornar o estudo e o desejo que encontrar novas oportunidades com os códigos. Esse site é um espaço para compartilhar minha trajetória de estudos e apresentar projetos, pessoais e profissionais. Outros detalhes e informações estão descritos no <a href="/curriculo" target="_self"><strong>Currículo</strong></a>.
+    </p>
+  </section>
+  <!-- / SEÇÃO: BIOGRAFIA -->
+
+  <!-- PROJETOS -->
   <section class="container">
-    <!-- PROJETOS -->
     <!-- Projeto 1 -->
-    <div class="projetos-sobre row position-relative align-items-center mb-5">
+    <div class="projetos-sobre row position-relative align-items-center mb-5" data-aos="fade-down" data-aos-once="true">
       <div class="col-lg-6">
         <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
         <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
@@ -125,7 +144,7 @@
     <!-- / Projeto 1 -->
 
     <!-- Projeto 2 -->
-    <div class="projetos-sobre row position-relative align-items-center mb-5">
+    <div class="projetos-sobre row position-relative align-items-center mb-5" data-aos="fade-down" data-aos-once="true">
       <div class="col-lg-6">
         <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
         <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
@@ -145,7 +164,7 @@
     <!-- / Projeto 2 -->
 
     <!-- Projeto 3 -->
-    <div class="projetos-sobre row position-relative align-items-center mb-5">
+    <div class="projetos-sobre row position-relative align-items-center mb-5" data-aos="fade-down" data-aos-once="true">
       <div class="col-lg-6">
         <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
         <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
@@ -165,7 +184,7 @@
     <!-- / Projeto 3 -->
 
     <!-- Projeto 4 -->
-    <div id="projeto-4" class="projetos-sobre row position-relative align-items-center mb-5">
+    <div id="projeto-4" class="projetos-sobre row position-relative align-items-center mb-5" data-aos="fade-down" data-aos-once="true">
       <div class="col-lg-6">
         <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
         <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
@@ -183,9 +202,52 @@
       </div>
     </div>
     <!-- / Projeto 4 -->
-    <!-- / PROJETOS-->
   </section>
+  <!-- / PROJETOS-->
 
+  <!-- SEÇÃO: ADS -->
+  <div class="fundo-secao-ads py-5">
+    <section id="secao-ads" class="container text-center">
+      <h3>Matemática</h3>
+      <hr class="hr-curto mb-4">
+
+      <p class="text-left w-75 mx-auto secao-ads-resumo">
+        "O curso de Matemática, Licenciatura, objetiva a formação do Professor de Matemática para os Anos Finais do Ensino Fundamental, Ensino Médio e Educação Profissional; possibilitando ao graduando a aquisição de amplo domínio teórico, experimental e pedagógico da Matemática, além do desenvolvimento de postura investigativa, ética, crítica e capaz de produzir e disseminar conhecimentos científicos e tecnológicos" (IFRJ).
+        <br><br>
+        Essa definição está totalmente ligada as características necessárias em várias áreas da vida, e para programação não é diferente. A Matemática é algo fundamental para Computação e acredito que construí (e continuo construindo) uma boa base analítica para o Desenvolvimento Web.
+      </p>
+
+      <a  href="https://portal.ifrj.edu.br/index.php" target="_blank">
+        <img class="mt-4" src="assets/img/icon-ifrj.png" alt="Logo Branco IFRJ">
+      </a>
+    </section>
+  </div>
+  <!-- / SEÇÃO: MATEMÁTICA -->
+
+  <!-- SEÇÃO: ARTE -->
+  <section id="sec-art" class="container text-center">
+    <h3>Arte</h3>
+    <hr class="hr-curto mb-4">
+
+    <div class="social">          
+      <a href="https://www.instagram.com/euchicoart/" target="_blank">
+        <img class="img-fluid" src="assets/img/social-instagram-1.png" alt="Instagram: @euchicoart">
+      </a>
+    </div>
+
+    <div class="row">
+      <img class="col-md-4 mt-4 img-fluid" src="assets/img/arte/euchico-arte-1.jpg" alt="Cartola, Arte por euChico">
+      <img class="col-md-4 mt-4 img-fluid" src="assets/img/arte/euchico-arte-2.jpg" alt="Hanna Lashay, Arte por euChico">
+      <img class="col-md-4 mt-4 img-fluid" src="assets/img/arte/euchico-arte-3.jpg" alt="Louis Armstrong, Arte por euChico">
+    </div>
+
+    <div class="row d-none d-md-flex">
+      <img class="col-md-4 mt-4 img-fluid" src="assets/img/arte/euchico-arte-4.jpg" alt="Talita Barbosa, Arte por euChico">
+      <img class="col-md-4 mt-4 img-fluid" src="assets/img/arte/euchico-arte-5.jpg" alt="John Lennon, Arte por euChico">
+      <img class="col-md-4 mt-4 img-fluid" src="assets/img/arte/euchico-arte-6.jpg" alt="Flavia Machado, Arte por euChico">
+    </div>
+  </section>
+  <!-- / SEÇÃO: ARTE -->
 
   <!-- RODAPÉ -->
   <footer class="container">
