Ajustes de identidade visual e imagens de projetos

--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
       <div class="col-md-7 text-center">
         <h2>Francisco de Paula</h2>
         <h3>Programador Jr.</h3> 
-        <hr class="hr-curto">
+        <div class="separador-curto"></div>
         <p>
           Compartilhando minha trajetória profissional, projetos pessoais e estudos de desenvolvimento.
         </p>
       </div>
     </div>
 
-    <hr class="hr-padrao">
+    <div class="separador-longo"></div>
   </header>
   <!-- / CABEÇALHO -->
 
@@ -117,10 +117,10 @@
   <section class="container">
     <!-- PROJETOS: Linha 1 -->
     <!-- Projeto 1 -->
-    <div class="projetos-inicio-linha-1  row position-relative align-items-center mb-5" data-aos="fade-right" data-aos-once="true">
+    <div class="projetos-inicio-linha-1 row position-relative align-items-center mb-5" data-aos="fade-right" data-aos-once="true">
       <div class="col-lg-6">
-        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
-        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
+        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-green-desktop.png" alt="{{ALT}}">
+        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-green-mobile.png" alt="{{ALT}}">
       </div>
 
       <div class="col-lg-6">
@@ -140,8 +140,8 @@
     <!-- Projeto 2 -->
     <div class="projetos-inicio-linha-1 row position-relative align-items-center mb-5" data-aos="fade-right" data-aos-once="true">
       <div class="col-lg-6">
-        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
-        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
+        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-sem-planilha-desktop.png" alt="{{ALT}}">
+        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-sem-planilha-mobile.png" alt="{{ALT}}">
       </div>
 
       <div class="col-lg-6">
@@ -205,10 +205,11 @@
   <!-- ESTUDO -->
   <section class="container mt-5">
     <div class="row">
+
       <!-- Estudo 1 -->
-      <div class="col-md-4 mb-5 mb-md-0 estudo">
-        <div>
-          <i class="fas fa-book fa-2x estudo-icone"></i>
+      <div class="col-lg-4 mb-3">
+        <div class="estudo">
+          <i class="estudo-icone fas fa-book fa-2x"></i>
           <h5 class="estudo-titulo">Estudos</h5>
           <p class="estudo-resumo px-3">
             Repositório com objetivo compartilhar estudos e conhecimentos em programação, 
@@ -222,9 +223,9 @@
       <!-- / Estudo 1 -->
 
       <!-- Estudo 2 -->
-      <div class="col-md-4 mb-5 mb-md-0 estudo">
-        <div>
-          <i class="fas fa-trophy fa-2x estudo-icone"></i>
+      <div class="col-lg-4 mb-3">
+        <div class="estudo">
+          <i class="estudo-icone fas fa-trophy fa-2x"></i>
           <h5 class="estudo-titulo">Desafios</h5>
           <p class="estudo-resumo px-3">
             Repositório dedicado ao compartilhamento desafios de programação e projetos completos para ilustrar a aplicação prática de conceitos de desenvolvimento.
@@ -237,9 +238,9 @@
       <!-- / Estudo 2 -->
 
       <!-- Estudo 3 -->
-      <div class="col-md-4 mb-5 mb-md-0 estudo">
-        <div>
-          <i class="fas fa-clipboard fa-2x estudo-icone"></i>
+      <div class="col-lg-4 mb-3">
+        <div class="estudo">
+          <i class="estudo-icone fas fa-clipboard fa-2x"></i>
           <h5 class="estudo-titulo">Resumos</h5>
           <p class="estudo-resumo px-3">
             Repositório de anotações e resumos para armazenar de maneira organizada e acessível os estudos realizados durante cursos e projetos de programação.
@@ -256,13 +257,13 @@
 
   <!-- RODAPÉ -->
   <footer class="container">
-    <hr class="hr-padrao">
+    <div class="separador-longo"></div>
     
     <div class="row justify-content-center">
       <div class="col-sm-6 col-12 text-center">
         <h6 class="logo"><span>eu</span><span>Chico</span></h6>
 
-        <hr class="hr-curto">
+        <div class="separador-curto"></div>
 
         <a href="mailto:eu.francisco@outlook.com"><span class="email">eu.francisco@outlook.com</span></a> 
 
