--- a/sobre.html
+++ b/sobre.html
@@ -257,7 +257,7 @@
       <div class="col-sm-6 col-12 text-center">
         <h6 class="logo"><span>eu</span><span>Chico</span></h6>
 
-        <hr class="hr-curto">
+        <div class="separador-curto"></div>
 
         <a href="mailto:eu.francisco@outlook.com"><span class="email">eu.francisco@outlook.com</span></a> 
 
