Atualização de imagens e textos

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <!-- SEO -->
   <meta http-equiv="content-language" content="pt-BR">
   <meta name="author" content="Francisco de Paula (euChico)">
-  <meta name="description" content="{ DESCRIÇÃO }">
+  <meta name="description" content="Compartilhando minha trajetória profissional, projetos pessoais e estudos de desenvolvimento.">
   <meta name="creator" content="Francisco de Paula (euChico)">
   <meta name="robots" content="index, follow">
 
   <meta property="og:locale" content="pt_BR">
   <meta property="og:type" content="website">
   <meta property="og:title" content="euChico - Francisco de Paula">
-  <meta property="og:description" content="{ DESCRIÇÃO }">
+  <meta property="og:description" content="Compartilhando minha trajetória profissional, projetos pessoais e estudos de desenvolvimento.">
   <meta property="og:url" content="https://euchico.github.io">
   <meta property="og:site_name" content="euChico">
   <meta property="og:image" content="{ LINK IMAGEM }">
@@ -28,7 +28,7 @@
   <meta name="twitter:site" content="@euchicodev">
   <meta name="twitter:creator" content="@euchicodev">
   <meta name="twitter:title" content="euChico - Francisco de Paula">
-  <meta name="twitter:description" content="{ DESCRIÇÃO }">
+  <meta name="twitter:description" content="Compartilhando minha trajetória profissional, projetos pessoais e estudos de desenvolvimento.">
   <meta name="twitter:image" content="{ LINK IMAGEM }">
   <!-- / SEO -->
   <!-- / METAS -->
@@ -165,8 +165,8 @@
         <div class="projeto-artigo">
           <h4 class="projeto-titulo">Projeto Aventura Solo</h4>
           <p class="projeto-resumo">
-            Uma plataforma de livro-jogo tem como objetivo fornecer uma solução para jogadores e criadores de aventuras solo de RPG, 
-            permitindo a criação e jogabilidade interativa de aventuras e compartilhamento com outros jogadores. 
+            Uma plataforma de livro-jogo como objetivo fornecer uma solução para jogadores e criadores de aventuras solo de RPG, 
+            permitindo a jogabilidade interativa de aventuras e compartilhamento com outros jogadores. 
           </p>
           <a class="projeto-link" href="https://github.com/euchico/projeto-aventura-solo" target="_blank"><span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
         </div>
@@ -193,8 +193,8 @@
       </div>
 
       <div class="col-md-6 order-1 order-md-2">
-        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
-        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
+        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-kojima-desktop.png" alt="{{ALT}}">
+        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-kojima-mobile.png" alt="{{ALT}}">
       </div>
     </div>
     <!-- / Projeto 4 -->
@@ -212,8 +212,7 @@
           <i class="estudo-icone fas fa-book fa-2x"></i>
           <h5 class="estudo-titulo">Estudos</h5>
           <p class="estudo-resumo px-3">
-            Repositório com objetivo compartilhar estudos e conhecimentos em programação, 
-            incluindo cursos e exemplos práticos nas linguagens utilizadas no meu quotidiano.
+            Repositório com objetivo de compartilhar estudos em programação, incluindo cursos e exemplos práticos em ferramentas importante no meu quotidiano.
           </p>
           <a href="https://github.com/euchico/estudos" target="_blank">
             <button class="btn btn-dark btn-sm" href="#">Acesse</button>
