--- a/sobre.html
+++ b/sobre.html
@@ -107,7 +107,7 @@
 
       <h2>Francisco de Paula</h2>
 
-      <hr class="hr-padrao">
+      <div class="separador-longo"></div>
     </div>
 
     <p class="resumo">
@@ -125,8 +125,8 @@
     <!-- Projeto 1 -->
     <div class="projetos-sobre row position-relative align-items-center mb-5" data-aos="fade-down" data-aos-once="true">
       <div class="col-lg-6">
-        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
-        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
+        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-green-desktop.png" alt="{{ALT}}">
+        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-green-mobile.png" alt="{{ALT}}">
       </div>
 
       <div class="col-lg-6">
@@ -146,13 +146,13 @@
     <!-- Projeto 2 -->
     <div class="projetos-sobre row position-relative align-items-center mb-5" data-aos="fade-down" data-aos-once="true">
       <div class="col-lg-6">
-        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
-        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
+        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-sem-planilha-desktop.png" alt="{{ALT}}">
+        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-sem-planilha-mobile.png" alt="{{ALT}}">
       </div>
 
       <div class="col-lg-6">
         <div class="projeto-artigo">
-          <h4 class="projeto-titulo">Projeto Carteira</h4>
+          <h4 class="projeto-titulo">Projeto Sem Planilha</h4>
           <p class="projeto-resumo">
             O projeto tem como objetivo atender às minhas necessidades pessoais de organização financeira de forma eficiente, 
             utilizando tecnologias avançadas, padrões de projeto e boas práticas recomendadas pelo mercado.
@@ -174,8 +174,8 @@
         <div class="projeto-artigo">
           <h4 class="projeto-titulo">Projeto Aventura Solo</h4>
           <p class="projeto-resumo">
-            Uma plataforma de livro-jogo tem como objetivo fornecer uma solução para jogadores e criadores de aventuras solo de RPG, 
-            permitindo a criação e jogabilidade interativa de aventuras e compartilhamento com outros jogadores. 
+            Uma plataforma de livro-jogo como objetivo fornecer uma solução para jogadores e criadores de aventuras solo de RPG, 
+            permitindo a jogabilidade interativa de aventuras e compartilhamento com outros jogadores. 
           </p>
           <a class="projeto-link" href="https://github.com/euchico/projeto-aventura-solo" target="_blank"><span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
         </div>
@@ -186,8 +186,8 @@
     <!-- Projeto 4 -->
     <div id="projeto-4" class="projetos-sobre row position-relative align-items-center mb-5" data-aos="fade-down" data-aos-once="true">
       <div class="col-lg-6">
-        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
-        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
+        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/projeto/projeto-kojima-desktop.png" alt="{{ALT}}">
+        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/projeto/projeto-kojima-mobile.png" alt="{{ALT}}">
       </div>
 
       <div class="col-lg-6">
