Ajuste na página sobre

--- a/sobre.html
+++ b/sobre.html
@@ -103,7 +103,7 @@
   <!-- SEÇÃO: BIOGRAFIA -->
   <section id="secao-biografia" class="container py-5">
     <div class="text-center">
-      <img class="img-fluid img-perfil" src="assets/img/euchico-perfil-2.jpg" alt="Avatar euChico">
+      <img class="img-fluid img-perfil" src="assets/img/euchico-perfil-principal.jpg" alt="Avatar euChico">
 
       <h2>Francisco de Paula</h2>
 
@@ -111,7 +111,7 @@
     </div>
 
     <p class="resumo">
-      Sou Francisco de Paula, moro no Rio de Janeiro, mais especificamente na Baixada e tenho 31 anos. Cursei Ciência da Computação, hoje faço Licenciatura em Matemática e sou Arte Amador, isso mostra que minha trajetória não é nada linear, por isso minha frase preferida é “Quando a gente anda sempre em frente, não pode ir muito longe…” (Saint-Exupéry).
+      Meu nome é Francisco de Paula, tenho 33 anos e moro na Baixada do Rio de Janeiro. Minha trajetória não segue uma linha reta. Iniciei o curso de Ciência da Computação, mas não o concluí. Atualmente, estou me formando em Licenciatura em Matemática e Análise e Desenvolvimento de Sistemas, e também cultivo a arte como hobby. Minha frase preferida, de Saint-Exupéry, "Quando a gente anda sempre em frente, não pode ir muito longe", reflete a minha jornada.
       <br><br>
       Desde pequeno desenho e me interesso por arte, chegando a pensar em seguir no Desenho Industrial. Contudo, a escolha para o meu primeiro curso superior foi Ciência da Computação, sempre fui apaixonado por jogos e tecnologia, a escolha fez muito sentido no momento. Foi um ótimo curso, mas esse período passei por alguns pontos baixos que resultaram no trancamento da graduação. Posteriormente, iniciei a Licenciatura em Matemática, um novo curso, em uma nova faculdade, a combinação perfeita das áreas de humanas com a Educação e exatas com a Matemática.
       <br><br>
